# dde-file-manager

./: CMakeLists.txt
assets/dev/dde-desktop-widgets/: DDEDesktopWidgetsConfig.cmake.in
debian/: control  libdde-desktop-widgets-dev.install  libdde-desktop-widgets.install
include/dde-desktop-widgets/: dde-desktop-widgets-global.h
src/apps/: CMakeLists.txt
src/apps/dde-desktop-widgets-viewer/: CMakeLists.txt  main.cpp
src/dfm-framework/lifecycle/: pluginmetaobject.cpp
src/dfm-gui/: panel_p.h
src/libs/: CMakeLists.txt
src/libs/dde-desktop-widgets/: CMakeLists.txt
src/libs/dfm-base/: dfm-base.cmake
src/plugins/daemon/: CMakeLists.txt
src/plugins/daemon/daemon-recentdaemon/: CMakeLists.txt
src/plugins/daemon/daemonplugin-anything/: dde-filemanager-anything.json  plugin.cpp
src/plugins/desktop/: CMakeLists.txt
src/plugins/desktop/ddplugin-widgets/: CMakeLists.txt  ddplugin_widgets_global.h  widgetsplugin.cpp  widgetsplugin.h  widgetsplugin.json
src/plugins/filemanager/core/dfmplugin-sidebar/treeviews/: sidebarwidget.cpp
src/plugins/filemanager/core/dfmplugin-titlebar/: dfmplugin_titlebar_global.h  titlebar.cpp  titlebar.h
src/plugins/filemanager/core/dfmplugin-titlebar/events/: titlebareventcaller.cpp  titlebareventcaller.h  titlebareventreceiver.cpp  titlebareventreceiver.h
src/plugins/filemanager/core/dfmplugin-titlebar/utils/: tabbarmanager.cpp  tabbarmanager.h
src/plugins/filemanager/core/dfmplugin-titlebar/views/: navwidget.cpp  tab.cpp  tabbar.cpp  tabbar.h  titlebarwidget.cpp  titlebarwidget.h
src/plugins/filemanager/core/dfmplugin-workspace/events/: workspaceeventreceiver.cpp  workspaceeventreceiver.h
src/plugins/filemanager/core/dfmplugin-workspace/menus/: workspacemenuscene.cpp
src/plugins/filemanager/core/dfmplugin-workspace/utils/: workspacehelper.cpp  workspacehelper.h
src/plugins/filemanager/core/dfmplugin-workspace/views/: workspacewidget.cpp  workspacewidget.h
src/service/: CMakeLists.txt
src/service/accesscontrol/: CMakeLists.txt
src/service/accesscontrol/dbusadaptor/: accesscontrolmanager_adaptor.h
src/service/mountcontrol/: CMakeLists.txt
src/service/mountcontrol/mounthelpers/: cifsmounthelper.cpp
src/service/mountcontrol/private/: mountcontrol_adapter.h
src/service/sharecontrol/: CMakeLists.txt  sharecontroldbus.h
src/service/sharecontrol/dbusadapter/: sharecontrol_adapter.h
